--- a/projects/ngx-mat-split-button-demo/src/app/app.component.html
+++ b/projects/ngx-mat-split-button-demo/src/app/app.component.html
@@ -1,138 +1,147 @@
 <h1>{{title}}</h1>
 
-<h2>Basic Style</h2>
-<ngx-mat-split-button (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Default action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="primary" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Primary action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="accent" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Accent action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="warn" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Warn action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
+<div class="grid">
+    <div class="col">
+        <h2>Basic Style</h2>
+        <ngx-mat-split-button (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Default action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Primary action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="accent" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Accent action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="warn" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Warn action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+    </div>
 
-<h2>Flat Style</h2>
-<ngx-mat-split-button buttonStyle="flat" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Default action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="primary" buttonStyle="flat" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Primary action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="accent" buttonStyle="flat" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Accent action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="warn" buttonStyle="flat" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Warn action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
+    <div class="col">
+        <h2>Flat Style</h2>
+        <ngx-mat-split-button buttonStyle="flat" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Default action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="flat" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Primary action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="accent" buttonStyle="flat" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Accent action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="warn" buttonStyle="flat" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Warn action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+    </div>
 
-<h2>Raised Style</h2>
-<ngx-mat-split-button buttonStyle="raised" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Default action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="primary" buttonStyle="raised" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Primary action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="accent" buttonStyle="raised" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Accent action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="warn" buttonStyle="raised" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Warn action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
+    <div class="col">
+        <h2>Raised Style</h2>
+        <ngx-mat-split-button buttonStyle="raised" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Default action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="raised" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Primary action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="accent" buttonStyle="raised" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Accent action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="warn" buttonStyle="raised" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Warn action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+    </div>
 
-<h2>Stroked Style</h2>
-<ngx-mat-split-button buttonStyle="stroked" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Default action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="primary" buttonStyle="stroked" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Primary action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="accent" buttonStyle="stroked" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Accent action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-<ngx-mat-split-button color="warn" buttonStyle="stroked" (primaryClick)="primaryClick()">
-    <ng-template ngx-mat-split-primary-action>
-        Warn action
-    </ng-template>
-    <button mat-menu-item (click)="secondaryClick()">Item 1</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 2</button>
-    <button mat-menu-item (click)="secondaryClick()">Item 3</button>
-</ngx-mat-split-button>
-
+    <div class="col">
+        <h2>Stroked Style</h2>
+        <ngx-mat-split-button buttonStyle="stroked" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Default action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="stroked" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Primary action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="accent" buttonStyle="stroked" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Accent action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="warn" buttonStyle="stroked" (primaryClick)="primaryClick()">
+            <ng-template ngx-mat-split-primary-action>
+                Warn action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+    </div>
+</div>
