--- a/projects/ngx-mat-split-button-demo/src/app/app.component.html
+++ b/projects/ngx-mat-split-button-demo/src/app/app.component.html
@@ -35,6 +35,22 @@
             <button mat-menu-item (click)="secondaryClick()">Item 2</button>
             <button mat-menu-item (click)="secondaryClick()">Item 3</button>
         </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" (primaryClick)="primaryClick()" [primaryDisabled]="true">
+            <ng-template ngx-mat-split-primary-action>
+                Primary disabled
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" (primaryClick)="primaryClick()" [menuTriggerDisabled]="true">
+            <ng-template ngx-mat-split-primary-action>
+                Trigger disabled
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
     </div>
 
     <div class="col">
@@ -66,6 +82,22 @@
         <ngx-mat-split-button color="warn" buttonStyle="flat" (primaryClick)="primaryClick()">
             <ng-template ngx-mat-split-primary-action>
                 Warn action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="flat" (primaryClick)="primaryClick()" [primaryDisabled]="true">
+            <ng-template ngx-mat-split-primary-action>
+                Primary disabled
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="flat" (primaryClick)="primaryClick()" [menuTriggerDisabled]="true">
+            <ng-template ngx-mat-split-primary-action>
+                Trigger disabled
             </ng-template>
             <button mat-menu-item (click)="secondaryClick()">Item 1</button>
             <button mat-menu-item (click)="secondaryClick()">Item 2</button>
@@ -107,6 +139,22 @@
             <button mat-menu-item (click)="secondaryClick()">Item 2</button>
             <button mat-menu-item (click)="secondaryClick()">Item 3</button>
         </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="raised" (primaryClick)="primaryClick()" [primaryDisabled]="true">
+            <ng-template ngx-mat-split-primary-action>
+                Primary disabled
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="raised" (primaryClick)="primaryClick()" [menuTriggerDisabled]="true">
+            <ng-template ngx-mat-split-primary-action>
+                Trigger disabled
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
     </div>
 
     <div class="col">
@@ -138,6 +186,22 @@
         <ngx-mat-split-button color="warn" buttonStyle="stroked" (primaryClick)="primaryClick()">
             <ng-template ngx-mat-split-primary-action>
                 Warn action
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="stroked" (primaryClick)="primaryClick()" [primaryDisabled]="true">
+            <ng-template ngx-mat-split-primary-action>
+                Primary disabled
+            </ng-template>
+            <button mat-menu-item (click)="secondaryClick()">Item 1</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 2</button>
+            <button mat-menu-item (click)="secondaryClick()">Item 3</button>
+        </ngx-mat-split-button>
+        <ngx-mat-split-button color="primary" buttonStyle="stroked" (primaryClick)="primaryClick()" [menuTriggerDisabled]="true">
+            <ng-template ngx-mat-split-primary-action>
+                Trigger disabled
             </ng-template>
             <button mat-menu-item (click)="secondaryClick()">Item 1</button>
             <button mat-menu-item (click)="secondaryClick()">Item 2</button>
