--- a/projects/ngx-mat-split-button-demo/src/app/app.component.scss
+++ b/projects/ngx-mat-split-button-demo/src/app/app.component.scss
@@ -8,6 +8,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
 
     .col {
         display: flex;
